EXTRA_DIST = \
						audiofile.png \
						distance.png \
						folder.png \
						folder_up.png \
						list_background.png \
						lower_bar.png \
						media_bg.png \
						medialist_selected.png \
						medialist_seperator.png \
						media_main_icon.png \
						menu_icon.png \
						mountain.png \
						navigation_arrow.png \
						navigation_cancel.png \
						navigation_flag.png \
						navigation_info.png \
						navigation_zoom_minus.png \
						navigation_zoom_plus.png \
						nav_main_icon.png \
						route_car_icon.png \
						shutdown.png \
						sidebar.png \
						upper_bar.png \
						white_border.png \
						navigation_poi.png

